# sdl-wrap

./: .gitignore  .gitmodules  CMakeLists.txt
Demo/: CMakeLists.txt
Demo/src/: BasicClock.h  main.cpp
src/: SDLContextWrapper.cpp  SDLContextWrapper.hpp  SDLWindowWrapper.cpp  SDLWindowWrapper.hpp
